src/main/java/net/sourceforge/jFuzzyLogic/fcl/FclParser.java
// $ANTLR 3.1.1 Fcl.g 2015-08-11 00:18:21

package net.sourceforge.jFuzzyLogic.fcl;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class FclParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "POINT", "FCL", "VALUE_REAL", "VALUE_ID", "ABS", "ACCU", "ACT", "AND", "ASUM", "BDIF", "BSUM", "COA", "COSINE", "COG", "COGS", "COGF", "COS", "DEFAULT", "DEFUZZIFY", "DMAX", "DMIN", "DSIGM", "EINSTEIN", "END_DEFUZZIFY", "END_FUNCTION_BLOCK", "END_FUZZIFY", "END_RULEBLOCK", "END_VAR", "EXP", "HAMACHER", "FUNCTION", "GAUSS", "GAUSS2", "GBELL", "FUNCTION_BLOCK", "FUZZIFY", "IF", "IS", "LM", "LN", "LOG", "MAX", "METHOD", "MIN", "NIPMIN", "NIPMAX", "MM", "NC", "NOT", "NSUM", "OR", "PROBOR", "PROD", "RANGE", "RM", "RULE", "RULEBLOCK", "SIGM", "SIN", "SINGLETONS", "SUM", "TAN", "TERM", "THEN", "TRAPE", "TRIAN", "TYPE_REAL", "VAR_INPUT", "VAR_OUTPUT", "WITH", "WS", "NEWLINE", "ASSIGN_OPERATOR", "COLON", "COMMA", "DOT", "DOTS", "HAT", "LEFT_CURLY", "LEFT_PARENTHESIS", "MINUS", "PERCENT", "PLUS", "RIGHT_CURLY", "RIGHT_PARENTHESIS", "SEMICOLON", "SLASH", "STAR", "DIGIT", "NUMBER", "LOWER", "UPPER", "LETTER", "ALPHANUM", "REAL", "COMMENT", "COMMENT_C", "COMMENT_SL", "ID"
    };
    public static final int FUNCTION=34;
    public static final int SIGM=61;
    public static final int STAR=91;
    public static final int LN=43;
    public static final int LETTER=96;
    public static final int LM=42;
    public static final int LOG=44;
    public static final int EINSTEIN=26;
    public static final int COG=17;
    public static final int NOT=52;
    public static final int EOF=-1;
    public static final int COA=15;
    public static final int HAT=81;
    public static final int SIN=62;
    public static final int EXP=32;
    public static final int MM=50;
    public static final int COS=20;
    public static final int TAN=65;
    public static final int LEFT_PARENTHESIS=83;
    public static final int COMMENT=99;
    public static final int GAUSS2=36;
    public static final int NC=51;
    public static final int END_RULEBLOCK=30;
    public static final int VAR_OUTPUT=72;
    public static final int ACT=10;
    public static final int END_DEFUZZIFY=27;
    public static final int RULE=59;
    public static final int NUMBER=93;
    public static final int GBELL=37;
    public static final int SEMICOLON=89;
    public static final int DMIN=24;
    public static final int VALUE_REAL=6;
    public static final int ALPHANUM=97;
    public static final int TYPE_REAL=70;
    public static final int ABS=8;
    public static final int REAL=98;
    public static final int WS=74;
    public static final int NSUM=53;
    public static final int LEFT_CURLY=82;
    public static final int OR=54;
    public static final int LOWER=94;
    public static final int END_FUZZIFY=29;
    public static final int UPPER=95;
    public static final int TERM=66;
    public static final int COGF=19;
    public static final int PROBOR=55;
    public static final int RIGHT_CURLY=87;
    public static final int NIPMIN=48;
    public static final int POINT=4;
    public static final int RM=58;
    public static final int MAX=45;
    public static final int DOTS=80;
    public static final int COGS=18;
    public static final int ID=102;
    public static final int AND=11;
    public static final int SUM=64;
    public static final int VALUE_ID=7;
    public static final int DSIGM=25;
    public static final int IF=40;
    public static final int SLASH=90;
    public static final int THEN=67;
    public static final int RIGHT_PARENTHESIS=88;
    public static final int COMMA=78;
    public static final int IS=41;
    public static final int DMAX=23;
    public static final int TRAPE=68;
    public static final int BDIF=13;
    public static final int PROD=56;
    public static final int COSINE=16;
    public static final int PLUS=86;
    public static final int DIGIT=92;
    public static final int DOT=79;
    public static final int FUNCTION_BLOCK=38;
    public static final int WITH=73;
    public static final int END_VAR=31;
    public static final int ACCU=9;
    public static final int ASUM=12;
    public static final int PERCENT=85;
    public static final int SINGLETONS=63;
    public static final int NIPMAX=49;
    public static final int ASSIGN_OPERATOR=76;
    public static final int TRIAN=69;
    public static final int DEFAULT=21;
    public static final int HAMACHER=33;
    public static final int COMMENT_C=100;
    public static final int FCL=5;
    public static final int RANGE=57;
    public static final int MIN=47;
    public static final int MINUS=84;
    public static final int DEFUZZIFY=22;
    public static final int COLON=77;
    public static final int NEWLINE=75;
    public static final int COMMENT_SL=101;
    public static final int VAR_INPUT=71;
    public static final int BSUM=14;
    public static final int RULEBLOCK=60;
    public static final int FUZZIFY=39;
    public static final int END_FUNCTION_BLOCK=28;
    public static final int METHOD=46;
    public static final int GAUSS=35;

    // delegates
    // delegators


        public FclParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public FclParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return FclParser.tokenNames; }
    public String getGrammarFileName() { return "Fcl.g"; }


    public static class main_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "main"
    // Fcl.g:167:1: main : f= fcl -> ^( FCL $f) ;
    public final FclParser.main_return main() throws RecognitionException {
        FclParser.main_return retval = new FclParser.main_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        FclParser.fcl_return f = null;


        RewriteRuleSubtreeStream stream_fcl=new RewriteRuleSubtreeStream(adaptor,"rule fcl");
        try {
            // Fcl.g:167:6: (f= fcl -> ^( FCL $f) )
            // Fcl.g:167:8: f= fcl
            {
            pushFollow(FOLLOW_fcl_in_main2585);
            f=fcl();

            state._fsp--;

            stream_fcl.add(f.getTree());


            // AST REWRITE
            // elements: f
            // token labels: 
            // rule labels: f, retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_f=new RewriteRuleSubtreeStream(adaptor,"token f",f!=null?f.tree:null);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 167:14: -> ^( FCL $f)
            {
                // Fcl.g:167:17: ^( FCL $f)
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(FCL, "FCL"), root_1);

                adaptor.addChild(root_1, stream_f.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "main"

    public static class fcl_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "fcl"
    // Fcl.g:168:1: fcl : ( function_block )+ ;
    public final FclParser.fcl_return fcl() throws RecognitionException {
        FclParser.fcl_return retval = new FclParser.fcl_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        FclParser.function_block_return function_block1 = null;



        try {
            // Fcl.g:168:5: ( ( function_block )+ )
            // Fcl.g:168:7: ( function_block )+
            {
            root_0 = (Object)adaptor.nil();

            // Fcl.g:168:7: ( function_block )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==FUNCTION_BLOCK) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // Fcl.g:168:8: function_block
            	    {
            	    pushFollow(FOLLOW_function_block_in_fcl2602);
            	    function_block1=function_block();

            	    state._fsp--;

            	    adaptor.addChild(root_0, function_block1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "fcl"

    public static class function_block_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "function_block"
    // Fcl.g:171:1: function_block : FUNCTION_BLOCK ( ID )? ( declaration )* END_FUNCTION_BLOCK ;
    public final FclParser.function_block_return function_block() throws RecognitionException {
        FclParser.function_block_return retval = new FclParser.function_block_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token FUNCTION_BLOCK2=null;
        Token ID3=null;
        Token END_FUNCTION_BLOCK5=null;
        FclParser.declaration_return declaration4 = null;


        Object FUNCTION_BLOCK2_tree=null;
        Object ID3_tree=null;
        Object END_FUNCTION_BLOCK5_tree=null;

        try {
            // Fcl.g:171:16: ( FUNCTION_BLOCK ( ID )? ( declaration )* END_FUNCTION_BLOCK )
            // Fcl.g:171:18: FUNCTION_BLOCK ( ID )? ( declaration )* END_FUNCTION_BLOCK
            {
            root_0 = (Object)adaptor.nil();

            FUNCTION_BLOCK2=(Token)match(input,FUNCTION_BLOCK,FOLLOW_FUNCTION_BLOCK_in_function_block2613); 
            FUNCTION_BLOCK2_tree = (Object)adaptor.create(FUNCTION_BLOCK2);
            root_0 = (Object)adaptor.becomeRoot(FUNCTION_BLOCK2_tree, root_0);

            // Fcl.g:171:34: ( ID )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==ID) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // Fcl.g:171:35: ID
                    {
                    ID3=(Token)match(input,ID,FOLLOW_ID_in_function_block2617); 
                    ID3_tree = (Object)adaptor.create(ID3);
                    adaptor.addChild(root_0, ID3_tree);


                    }
                    break;

            }

            // Fcl.g:171:40: ( declaration )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==DEFUZZIFY||LA3_0==FUZZIFY||LA3_0==RULEBLOCK||(LA3_0>=VAR_INPUT && LA3_0<=VAR_OUTPUT)) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // Fcl.g:171:41: declaration
            	    {
            	    pushFollow(FOLLOW_declaration_in_function_block2622);
            	    declaration4=declaration();

            	    state._fsp--;

            	    adaptor.addChild(root_0, declaration4.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            END_FUNCTION_BLOCK5=(Token)match(input,END_FUNCTION_BLOCK,FOLLOW_END_FUNCTION_BLOCK_in_function_block2626); 

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "function_block"

    public static class declaration_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "declaration"
    // Fcl.g:172:1: declaration : ( var_input | var_output | fuzzify_block | defuzzify_block | rule_block );
    public final FclParser.declaration_return declaration() throws RecognitionException {
        FclParser.declaration_return retval = new FclParser.declaration_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        FclParser.var_input_return var_input6 = null;

        FclParser.var_output_return var_output7 = null;

        FclParser.fuzzify_block_return fuzzify_block8 = null;

        FclParser.defuzzify_block_return defuzzify_block9 = null;

        FclParser.rule_block_return rule_block10 = null;



        try {
            // Fcl.g:172:13: ( var_input | var_output | fuzzify_block | defuzzify_block | rule_block )
            int alt4=5;
            switch ( input.LA(1) ) {
            case VAR_INPUT:
                {
                alt4=1;
                }
                break;
            case VAR_OUTPUT:
                {
                alt4=2;
                }
                break;
            case FUZZIFY:
                {
                alt4=3;
                }
                break;
            case DEFUZZIFY:
                {
                alt4=4;
                }
                break;
            case RULEBLOCK:
                {
                alt4=5;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }

            switch (alt4) {
                case 1 :
                    // Fcl.g:172:15: var_input
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_var_input_in_declaration2635);
                    var_input6=var_input();

                    state._fsp--;

                    adaptor.addChild(root_0, var_input6.getTree());

                    }
                    break;
                case 2 :
                    // Fcl.g:172:27: var_output
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_var_output_in_declaration2639);
                    var_output7=var_output();

                    state._fsp--;

                    adaptor.addChild(root_0, var_output7.getTree());

                    }
                    break;
                case 3 :
                    // Fcl.g:172:40: fuzzify_block
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_fuzzify_block_in_declaration2643);
                    fuzzify_block8=fuzzify_block();

                    state._fsp--;

                    adaptor.addChild(root_0, fuzzify_block8.getTree());

                    }
                    break;
                case 4 :
                    // Fcl.g:172:56: defuzzify_block
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_defuzzify_block_in_declaration2647);
                    defuzzify_block9=defuzzify_block();

                    state._fsp--;

                    adaptor.addChild(root_0, defuzzify_block9.getTree());

                    }
                    break;
                case 5 :
                    // Fcl.g:172:74: rule_block
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_rule_block_in_declaration2651);
                    rule_block10=rule_block();

                    state._fsp--;

                    adaptor.addChild(root_0, rule_block10.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "declaration"

    public static class var_input_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "var_input"
    // Fcl.g:175:1: var_input : VAR_INPUT ( var_def )* END_VAR ;
    public final FclParser.var_input_return var_input() throws RecognitionException {
        FclParser.var_input_return retval = new FclParser.var_input_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token VAR_INPUT11=null;
        Token END_VAR13=null;
        FclParser.var_def_return var_def12 = null;


        Object VAR_INPUT11_tree=null;
        Object END_VAR13_tree=null;

        try {
            // Fcl.g:175:11: ( VAR_INPUT ( var_def )* END_VAR )
            // Fcl.g:175:13: VAR_INPUT ( var_def )* END_VAR
            {
            root_0 = (Object)adaptor.nil();

            VAR_INPUT11=(Token)match(input,VAR_INPUT,FOLLOW_VAR_INPUT_in_var_input2660); 
            VAR_INPUT11_tree = (Object)adaptor.create(VAR_INPUT11);
            root_0 = (Object)adaptor.becomeRoot(VAR_INPUT11_tree, root_0);

            // Fcl.g:175:24: ( var_def )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==ID) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // Fcl.g:175:25: var_def
            	    {
            	    pushFollow(FOLLOW_var_def_in_var_input2664);
            	    var_def12=var_def();

            	    state._fsp--;

            	    adaptor.addChild(root_0, var_def12.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            END_VAR13=(Token)match(input,END_VAR,FOLLOW_END_VAR_in_var_input2668); 

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "var_input"

    public static class var_output_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "var_output"
    // Fcl.g:176:1: var_output : VAR_OUTPUT ( var_def )+ END_VAR ;
    public final FclParser.var_output_return var_output() throws RecognitionException {
        FclParser.var_output_return retval = new FclParser.var_output_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token VAR_OUTPUT14=null;
        Token END_VAR16=null;
        FclParser.var_def_return var_def15 = null;


        Object VAR_OUTPUT14_tree=null;
        Object END_VAR16_tree=null;

        try {
            // Fcl.g:176:12: ( VAR_OUTPUT ( var_def )+ END_VAR )
            // Fcl.g:176:14: VAR_OUTPUT ( var_def )+ END_VAR
            {
            root_0 = (Object)adaptor.nil();

            VAR_OUTPUT14=(Token)match(input,VAR_OUTPUT,FOLLOW_VAR_OUTPUT_in_var_output2676); 
            VAR_OUTPUT14_tree = (Object)adaptor.create(VAR_OUTPUT14);
            root_0 = (Object)adaptor.becomeRoot(VAR_OUTPUT14_tree, root_0);

            // Fcl.g:176:26: ( var_def )+
            int cnt6=0;
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==ID) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // Fcl.g:176:27: var_def
            	    {
            	    pushFollow(FOLLOW_var_def_in_var_output2680);
            	    var_def15=var_def();

            	    state._fsp--;

            	    adaptor.addChild(root_0, var_def15.getTree());

            	    }
            	    break;
